# Pidroid

./: .flake8  .gitignore  Dockerfile  LICENSE  Pidroid.code-workspace  README.md  alembic.ini  build.sh  config.env.example  db.yml  docker-compose.yml  init-database.sh  mypy.ini  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-image.yml  flake8.yml  test using basedpyright.yml  test.yml
alembic/: env.py
alembic/versions/: 08d143919da6_add_date_created_to_the_reminder_table.py  1735e3e17c9b_add_stacking_option_to_the_guild_.py  389ed2044ffd_finish_updating_user_levels_table.py  3c8d28d954d5_aaa.py  58da93f13d53_update_user_levels_table.py  59318486cff2_change_levelrewards_level_to_biginteger.py  5a4e82566a92_added_linked_accounts_table.py  5e7af188bcec_create_extension.py  82ed2ac5afea_remove_role_change_queue.py  92b55b3bbe0d_add_message_id_column_to_reminders.py  98f472898da8_add_reminders_table.py  eab3567ad381_added_suggestion_related_options_to_.py  f0570c3fea31_update_mappings.py  fbec2237a3a7_remove_progress_character_column_and_.py
bot/: client.py  config.json.example  constants.py  main.py  migrate.py  requirements.txt
bot/cogs/ext/: error_handler.py
bot/cogs/models/: case.py  categories.py  configuration.py  exceptions.py  plugins.py  punishments.py  waifu.py  waifuListApi.py  waifulistapi.py
bot/cogs/utils/: aliases.py  api.py  checks.py  converters.py  data.py  decorators.py  embeds.py  getters.py  http.py  logger.py  paginators.py  parsers.py  time.py
bot/resources/: serious error has occurred
pidroid/: __init__.py  client.py  constants.py  main.py  migrate_db.py
pidroid-api/: .env.example  pyproject.toml
pidroid-api/src/api/: __init__.py  config.py  dependencies.py  main.py
pidroid-api/src/api/routes/: bot.py  health.py
pidroid-api/src/api/schemas/: responses.py
pidroid-bot/: Dockerfile  pyproject.toml
pidroid-bot/alembic/versions/: 3c8d28d954d5_add_initial_level_tables.py  4f0e88d960e5_initial_commit.py  56d14b370f9b_create_progress_character_column_for_.py  574961e0a853_add_appeal_url_for_guild_configs.py  5e7af188bcec_create_extension.py  6758102fff31_added_rolechangequeue_table.py  6bda5ebb3b42_remove_mute_role_column_from_guild_.py  8c8a4f8ad03f_add_roles_row_to_linked_accounts_table.py  c8d1a40ab779_remove_a_table_and_a_row.py  d6f1a4f3d06e_fix_message_id_can_be_null_in_.py  d701f9500009_add_date_wage_last_redeemed_column_to_.py  e4ab9de39520_add_punishing_moderators_boolean_to_.py  f1af566cd6d0_remove_suggestions_table.py
pidroid-bot/src/pidroid/: __init__.py  client.py  constants.py  main.py
pidroid-bot/src/tests/: test_utils.py
pidroid/cogs/commands/: admin.py  anime.py  bot.py  economy.py  emoji.py  forum.py  fun.py  giveaway.py  help.py  image.py  info.py  levels.py  owner.py  reddit.py  setting.py  sticker.py  suggestion.py  tags.py  theotown.py  utilities.py
pidroid/cogs/ext/: error_handler.py
pidroid/cogs/handlers/: automod.py  error_handler.py  guild_events.py  initialization.py  leveling_handler.py  logging_handler.py  punishment_handler.py  punishment_listener.py  reminder_handler.py  thread_archiver.py
pidroid/cogs/models/: accounts.py  case.py  categories.py  configuration.py  exceptions.py  guild_configuration.py  persistent_views.py  (+2 more)
pidroid/commands/: anime.py  bot.py  economy.py  emoji.py  forum.py  fun.py  giveaway.py  help.py  image.py  information.py  level.py  moderation.py  moderation_information.py  owner.py  setting.py  sticker.py  suggestion.py  tag.py  theotown.py  utility.py
pidroid/models/: accounts.py  case.py  categories.py  event_types.py  exceptions.py  guild_configuration.py  guild_information.py  logs.py  persistent_views.py  plugins.py  punishments.py  queue.py  role_changes.py  setting_ui.py  tags.py  translation.py  view.py  waifulistapi.py
pidroid/services/: configuration.py  error_handler.py  faststream_service.py  leveling.py  logging.py  presence.py  punishment.py  reminders.py  thread_archiver.py
pidroid/utils/: __init__.py  aliases.py  api.py  checks.py  converters.py  cooldowns.py  cronjobs.py  data.py  debouncer.py  decorators.py  embeds.py  http.py  levels.py  paginators.py  parsers.py  time.py  types.py
tests/: __init__.py  test_time.py  test_utils.py
(+220 files in other folders)
