[tool.poetry]
name = "pidroid"
version = "5.20.0"
description = "Pidroid Discord bot for TheoTown"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"
python-dateutil = "^2.9.0.post0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.30.0"
jishaku = "^2.5.2"
aiohttp = "^3.10.11"
pytz = "^2024.1"
psutil = "^6.0.0"
pillow = "^10.4.0"
aiofiles = "^24.1.0"
aiodbm = "^0.4.2"
aiocron = "^1.8"
httpx = "^0.27.0"
lxml = "^5.2.2"
emoji = "^2.12.1"
uvloop = { version = "^0.19.0", optional = true }
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
dill = "^0.3.8"
h2 = "^4.1.0"
pytest = "^8.2.2"
pynacl = "^1.5.0"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.scripts]
main = "pidroid.main:main"
start = "pidroid.main:main"
migrate = "pidroid.main:migrate"

[tool.basedpyright]
ignore = ["alembic/versions"]
reportMissingTypeStubs = false
reportUnusedCallResult = false
pythonVersion = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
