[project]
name = "pidroid"
version = "5.22.2"
description = "Pidroid Discord bot for TheoTown"
authors = [{ name = "JustAnyone", email = "dominykas@svetikas.lt" }]
requires-python = "~=3.12,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "discord-py>=2.6.0",
    "python-dateutil>=2.9.0.post0,<3",
    "sqlalchemy>=2.0.31,<3",
    "asyncpg>=0.30.0,<0.31",
    "jishaku>=2.5.2,<3",
    "aiohttp>=3.10.11,<4",
    "pytz~=2024.1",
    "psutil>=6.0.0,<7",
    "pillow>=10.4.0,<11",
    "aiofiles>=24.1.0,<25",
    "aiodbm>=0.4.2,<0.5",
    "aiocron~=1.8",
    "httpx>=0.27.0,<0.28",
    "lxml>=5.2.2,<6",
    "emoji>=2.12.1,<3",
    "alembic>=1.13.2,<2",
    "python-dotenv>=1.0.1,<2",
    "dill>=0.3.8,<0.4",
    "pynacl>=1.5.0,<2",
    "h2>=4.2.0,<5",
    "greenlet>=3.2.1",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.19.0,<0.20"]

[project.scripts]
pidroid = "pidroid.main:main"
main = "pidroid.main:main"
start = "pidroid.main:main"
migrate = "pidroid.main:migrate"


[dependency-groups]
dev = [
    "coverage>=7.8.0,<8",
    "pytest>=8.2.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
ignore = ["alembic/versions"]
reportMissingTypeStubs = false
reportUnusedCallResult = false
pythonVersion = "3.12"
