[project]
name = "pidroid-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi>=0.126.0",
    "faststream[rabbit]>=0.6.4",
    "uvicorn>=0.38.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
